Self-initialized, and event dispatching

--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:zessx/cookiesplease.git"
-  }
+  },
+  "ignore": [
+    "cookiesplease.png",
+    "README.md"
+  ]
 }
